# netbench_orchestrator

./: Cargo.toml  Makefile  README.md  index.html  output.json  request_response.json  sim_netbench_clien.sh  sim_netbench_client.sh  testing_long_process.sh
scripts/: net_client.sh  net_server.sh  request_response.json  request_response_multi_10_incast.json  request_response_multi_20_incast_10GB_req_resp.json  request_response_multi_20_incast_1GB_req_resp.json  request_response_multi_20_incast_3GB_req_resp.json  request_response_multi_25_incast.json  request_response_multi_2_incast.json  request_response_multi_2_incast_3GB_req_resp.json  request_response_multi_50_incast.json  request_response_multi_5_incast_3GB_req_resp.json
src/: cli.rs  coordination_utils.rs  dashboard.rs  duration.rs  ec2_utils.rs  error.rs  execute_on_host.rs  launch.rs  main.rs  orchestrator.rs  report.rs  request_response.json  runner.rs  russula.rs  russula_cli.rs  russula_runner.rs  s3_helper.rs  s3_utils.rs  ssm_utils.rs  state.rs  utils.rs
src/ec2_utils/: cluster.rs  instance.rs  launch_plan.rs  networking.rs
src/orchestrator/: dashboard.rs  report.rs  state.rs
src/russula/: error.rs  event.rs  mod.rs  netbench.rs  netbench_orch.rs  netbench_server.rs  netbench_server_coord.rs  netbench_server_worker.rs  network_utils.rs  protocol.rs  state_action.rs  states.rs  wip_netbench_server.rs
src/russula/netbench/: client_coord.rs  client_worker.rs  server_coord.rs  server_worker.rs
src/ssm_utils/: client.rs  common.rs  netbench_driver.rs  server.rs
src/ssm_utils/netbench_driver/: native_tls_driver.rs  s2n_quic_dc_driver.rs  s2n_quic_driver.rs  s2n_quic_driver_crates.rs  s2n_quic_driver_github.rs  s2n_tls_driver.rs  salty_driver.rs  tcp_driver.rs  tcp_driver_crates.rs
